--- a/la sale/views/browselisting.hbs
+++ b/la sale/views/browselisting.hbs
@@ -4,7 +4,7 @@
     <title>browselisting</title>
     <!-- BootstrapCDN -->
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.4.1/css/bootstrap.min.css" integrity="sha384-Vkoo8x4CGsO3+Hhxv8T/Q5PaXtkKtu6ug5TOeNV6gBiFeWPGFN9MuhOf23Q9Ifjh" crossorigin="anonymous">
-    <link rel="stylesheet" type="text/css" href="browselisting_style.css">
+    <link rel="stylesheet" type="text/css" href="styles/browselisting_style.css">
     <link href="https://fonts.googleapis.com/css?family=Lobster|Roboto:300,400,500,700&display=swap" rel="stylesheet">
 </head>
 <body>
