--- a/la sale/views/messages.hbs
+++ b/la sale/views/messages.hbs
@@ -5,7 +5,7 @@
     <title>messages</title>
 
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.4.1/css/bootstrap.min.css" integrity="sha384-Vkoo8x4CGsO3+Hhxv8T/Q5PaXtkKtu6ug5TOeNV6gBiFeWPGFN9MuhOf23Q9Ifjh" crossorigin="anonymous">
-    <link rel="stylesheet" type="text/css" href="messages_style.css">
+    <link rel="stylesheet" type="text/css" href="styles/messages_style.css">
     <script src="https://kit.fontawesome.com/b203cdfa08.js" crossorigin="anonymous"></script>
     <link href="https://fonts.googleapis.com/css?family=Lobster|Roboto:300,400,500,700&display=swap" rel="stylesheet">
     <link href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.css" type="text/css" rel="stylesheet">
