--- a/la sale/views/listing.hbs
+++ b/la sale/views/listing.hbs
@@ -17,81 +17,25 @@
 	<script src="scripts/listing_script.js"></script>
 </head>
 <body>
-    <div id="clock">
-        <iframe scrolling="no" frameborder="no" clocktype="html5" style="overflow:hidden;border:0;margin:0;padding:0;width:240px;height:25px; position:fixed; bottom:0; right: 0;"src="https://www.clocklink.com/html5embed.php?clock=018&timezone=GMT0800&color=gray&size=240&Title=&Message=&Target=&From=2020,1,1,0,0,0&DateFormat=yyyy / mm / dd DDD&TimeFormat=hh:mm:ss TT&Color=gray"></iframe>
-    </div>
-    <!-- Navbar -->
-    <nav class="navbar navbar-expand-lg navbar-light " style="background-color: #DAE9CF; position: sticky; top:0; z-index: 9;">
-        <a class="navbar-brand" href="browselisting.html">
-            <img src="assets/logo.png" id="lasalelogo" style="height: 50px;">
-        </a>
-        <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
-          <span class="navbar-toggler-icon"></span>
-        </button>
-    
-        <div class="collapse navbar-collapse" id="navbarSupportedContent">
-            <ul class="navbar-nav mr-auto">
-                <li class="nav-item">
-                <a class="nav-link" href="editprofile.html">profile</a>
-                </li>
-                <li class="nav-item">
-                    <a class="nav-link" href="mylistings.html">my listings</a>
-                </li>
-                <li class="nav-item">
-                    <a class="nav-link" href="createlisting.html">create listing</a>
-                </li>
-                <li class="nav-item">
-                    <a class="nav-link" href="messages.html">message</a>
-                </li>
-                <li class="nav-item">
-                    <a class="nav-link" href="userlogin.html">logout</a>
-                </li>
-            </ul>
-            
-            <div class="dropdown" style="margin-right: 20px;">
-                <button class="btn btn-secondary dropdown-toggle" type="button" id="dropdownMenuButton" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
-                  filter items
-                </button>
-                <div class="dropdown-menu" aria-labelledby="dropdownMenuButton">
-                    <a class="dropdown-item" href="#">clothes</a>
-                    <a class="dropdown-item" href="#">food and drinks</a>
-                    <a class="dropdown-item" href="#">electronics</a>
-                    <a class="dropdown-item" href="#">tickets and coupons</a>
-                    <a class="dropdown-item" href="#">furniture</a>
-                    <a class="dropdown-item" href="#">beauty and wellness</a>
-                    <a class="dropdown-item" href="#">books</a>
-                    <a class="dropdown-item" href="#">hobbies and games</a>
-                    <a class="dropdown-item" href="#">sports</a>
-                    <a class="dropdown-item" href="#">accessories</a>
-                    <a class="dropdown-item" href="#">media</a>
-                    <a class="dropdown-item" href="#">music</a>
-                    <a class="dropdown-item" href="#">pets and accessories</a>
-                </div>
-            </div>
-            <form class="form-inline">
-                <input class="form-control mr-sm-2" type="search" placeholder="search for an item" aria-label="Search" style="width: 500px;">
-                <button class="btn btn-outline-success my-2 my-sm-0" type="submit">Search</button>
-            </form>
-        </div>
-    </nav>
+    {{> clock}}
+    {{> navbar}}
 
     <div class="container"> 
         <div class="row"> 
             <div class="col-md">
-                <h1 id="productname">kitty cat</h1>
+                <h1 id="productname">{{productname}}</h1>
             </div>
         </div> 
 		<div class="row">
 			<div class="col-md">
-				<p><span id="typelabel">product type:</span> <span id="producttype">pet</span></p>
+				<p><span id="typelabel">product type:</span> <span id="producttype"> {{producttype}} </span></p>
 			</div>
 			<a href="profile.html">
 				<div class="col-md" id="userhandle">
 					<img src="https://scontent.fmnl4-2.fna.fbcdn.net/v/t31.0-8/p960x960/20121362_1736297566398483_7291854775675033945_o.jpg?_nc_cat=110&_nc_ohc=5jcWFVIEsWoAX8eQawm&_nc_ht=scontent.fmnl4-2.fna&_nc_tp=6&oh=f910a6c44070644b617115eaf29f680d&oe=5EC21F51" class="rounded-circle" id="userpic">
-					<p id="username">@imsopogi</p>
+					<p id="username"> {{username}} </p>
 				</div>
 			</a>
-			
 		</div> 
 
 		<!-- Carousel -->
@@ -99,15 +43,11 @@
 			<div class="col">
 			<div id="carouselExampleControls" class="carousel slide" data-ride="carousel">
 				<div class="carousel-inner">
-					<div class="carousel-item active">
-					<img src="https://i.pinimg.com/564x/9a/be/5f/9abe5f0ad84b083a1a52dac183c7bc89.jpg" class="d-block w-100" alt="...">
-					</div>
-					<div class="carousel-item">
-					<img src="https://cdn.pixabay.com/photo/2019/07/28/07/03/kitty-4368029_960_720.jpg" class="d-block w-100" alt="...">
-					</div>
-					<div class="carousel-item">
-					<img src="https://postmediacanoe.files.wordpress.com/2019/07/gettyimages-910314172-e1564420108411.jpg" class="d-block w-100" alt="...">
-					</div>
+					{{#each photo}}
+						<div class="carousel-item active">
+						<img src={{{img}}} class="d-block w-100" alt="...">
+						</div>
+					{{/each}}
 				</div>
 				<a class="carousel-control-prev" href="#carouselExampleControls" role="button" data-slide="prev">
 					<span class="carousel-control-prev-icon" aria-hidden="true"></span>
@@ -124,7 +64,7 @@
 		<!-- Product description -->
 		<div class="row">
 		<div class="col">
-			<p id="productdesc">kitty kat iss cute and needs home pls buy him. his name is ms fluffy. Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</p>
+			<p id="productdesc"> {{productdesc}} </p>
 		</div>
 
 		</div>
@@ -138,7 +78,7 @@
 			</div>
 
 			<div class="col-md infoval" >
-			<p id="pricerangeval"><span id="lb">100</span> - <span id="ub">5000</span></p>
+			<p id="pricerangeval"><span id="lb"> {{lowrange}}</span> - <span id="ub"> {{highrange}}</span></p>
 			</div>
 		</div>
 
@@ -160,7 +100,7 @@
 		</div>
 
 		<div class="col-md infoval">
-			<p><span id="highestbid">1000</span> php</p>
+			<p><span id="highestbid"> {{highestbid}} </span> php</p>
 		</div>
 		</div>
 		
@@ -171,7 +111,7 @@
 			</div>
 	
 			<div class="col-md infoval">
-				<p><a id="highestbidder" href="profile.html">@imspogi</a></p>
+				<p><a id="highestbidder" href="profile.html"> {{highestbidderun}} </a></p>
 			</div>
 			</div>
     
