--- a/la sale/views/partials/navbar.hbs
+++ b/la sale/views/partials/navbar.hbs
@@ -1,6 +1,6 @@
 <!-- Navbar -->
     <nav class="navbar navbar-expand-lg navbar-light " style="background-color: #DAE9CF; position: sticky; top:0; z-index: 9;">
-        <a class="navbar-brand" href="browselisting.html">
+        <a class="navbar-brand" href="/browse">
             <img src="assets/logo.png" id="lasalelogo" style="height: 50px;">
         </a>
         <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
@@ -10,19 +10,19 @@
         <div class="collapse navbar-collapse" id="navbarSupportedContent">
             <ul class="navbar-nav mr-auto">
                 <li class="nav-item">
-                <a class="nav-link" href="editprofile.html">profile</a>
+                <a class="nav-link" href="/profile">profile</a>
                 </li>
                 <li class="nav-item">
-                    <a class="nav-link" href="mylistings.html">my listings</a>
+                    <a class="nav-link" href="/mylistings">my listings</a>
                 </li>
                 <li class="nav-item">
-                    <a class="nav-link" href="createlisting.html">create listing</a>
+                    <a class="nav-link" href="/createlisting">create listing</a>
                 </li>
                 <li class="nav-item">
-                    <a class="nav-link" href="messages.html">message</a>
+                    <a class="nav-link" href="/messages">message</a>
                 </li>
                 <li class="nav-item">
-                    <a class="nav-link" href="userlogin.html">logout</a>
+                    <a class="nav-link" href="/logout">logout</a>
                 </li>
             </ul>
             
