--- a/la sale/views/browselisting.hbs
+++ b/la sale/views/browselisting.hbs
@@ -33,7 +33,7 @@
                 <script>
                     x++;
                     if(x%2==0){
-                        $("#browselistings").append("</div> <div class=\"row\"");
+                        $("#browselistings").append("</div> <br> <div class=\"row\"");
                         x=0;
                     }
                 </script>
