--- a/la sale/views/listing.hbs
+++ b/la sale/views/listing.hbs
@@ -32,8 +32,8 @@
 			</div>
 			<a href="profile.html">
 				<div class="col-md" id="userhandle">
-					<img src="https://scontent.fmnl4-2.fna.fbcdn.net/v/t31.0-8/p960x960/20121362_1736297566398483_7291854775675033945_o.jpg?_nc_cat=110&_nc_ohc=5jcWFVIEsWoAX8eQawm&_nc_ht=scontent.fmnl4-2.fna&_nc_tp=6&oh=f910a6c44070644b617115eaf29f680d&oe=5EC21F51" class="rounded-circle" id="userpic">
-					<p id="username"> {{username}} </p>
+					<img src= {{{userpic}}} id="userpic">
+					<p id="username"> @{{username}} </p>
 				</div>
 			</a>
 		</div> 
@@ -111,7 +111,7 @@
 			</div>
 	
 			<div class="col-md infoval">
-				<p><a id="highestbidder" href="profile.html"> {{highestbidderun}} </a></p>
+				<p><a id="highestbidder" href="profile.html"> @{{highestbidderun}} </a></p>
 			</div>
 			</div>
     
