--- a/la sale/views/editprofile.hbs
+++ b/la sale/views/editprofile.hbs
@@ -31,7 +31,7 @@
                     <div class="row">
                         <!-- Username and rating -->
                         <div class="col-md-6">
-                            <h2 id="username">{{username}}</h2>
+                            <h2 id="username">@{{username}}</h2>
                         </div>
                 
                     </div>
