--- a/la sale/views/browselisting.hbs
+++ b/la sale/views/browselisting.hbs
@@ -38,11 +38,7 @@
                     }
                 </script>
                 {{/each}}
-                <script>
-                    if(x%2==1){
-                        $("#browselistings").append("</div>");
-                    }
-                </script>
+                </div>
 
         </div>
     </div>
