--- a/la sale/views/mylistings.hbs
+++ b/la sale/views/mylistings.hbs
@@ -96,12 +96,7 @@
                 }
                 </script>
             {{/each}}
-
-            <script>
-                    if(x%2==1){
-                        $("#mylistings").append("</div>");
-                    }
-            </script> 
+            </div>
         </div>
     </div>
 
